--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "staempfli/magento2-module-pdf",
   "description": "Staempfli PDF generator.",
   "require": {
-    "php": "~5.6.0|~7.0.0|~7.1.0",
+    "php": ">=5.6",
     "mikehaertl/phpwkhtmltopdf": "2.1.0",
     "magento/framework": "~100.1.2|~101.0.0",
     "magento/module-backend": "^100.1.1"
